tests/semantic/rel_udef/rel_udef.dl
// Negative test case for a rule that uses an undefined relation

.type Type
.decl R(type:Type)

R(a) :- X(a).
